--- a/templates/layout.html
+++ b/templates/layout.html
@@ -46,15 +46,24 @@
         </ul>
 		
 		 <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right" role="form">
-            <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
-            </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
-          </form>
+		 {% if session.logged_in %}
+			<form class="navbar-form navbar-right" role="form" action="{{ url_for('logout') }}" >
+				<button type="submit" class="btn btn-success">Logout</button> 
+			</form>			 
+		 {% else %}
+			<form class="navbar-form navbar-right" role="form" action="" method="post" name="form1">
+				<div class="form-group">
+				  <input type="text" placeholder="Email" class="form-control" name="email">
+				</div>
+				<div class="form-group">
+				  <input type="password" placeholder="Password"  class="form-control" name="passwd">
+				</div>
+				<button type="button" class="btn btn-success" onclick=			"this.form.action = '{{ url_for('login') }}'; this.form.submit() " >Login</button> 
+				<button type="button" class="btn btn-success" onclick=			"this.form.action = '{{ url_for('signin') }}'; this.form.submit() ">Sign in</button> 
+			</form>	 		 
+		 {% endif %}
+		 
+           
         </div><!--/.navbar-collapse -->
       </div>
       <!--/.nav-collapse -->
